--- a/imports/ui/shared/footer/footer.html
+++ b/imports/ui/shared/footer/footer.html
@@ -2,7 +2,7 @@
 
   <footer class="footer">
     <div class="container">
-      <p class="text-muted mt-3">Footer</p>
+      <p class="text-muted mt-3">DisposableCalendar</p>
     </div>
   </footer>
 
